@@ -288,7 +288,7 @@ public class DigesterRepresentation extends WrapperRepresentation {
 
     @Override
     public void write(WritableByteChannel writableChannel) throws IOException {
-        write(NioUtils.getOutputStream(writableChannel));
+        write(NioUtils.getStream(writableChannel));
     }
 
     @Override
