@@ -74,7 +74,7 @@ public abstract class StreamRepresentation extends Representation {
     public void write(java.nio.channels.WritableByteChannel writableChannel)
             throws IOException {
         OutputStream os = org.restlet.engine.io.NioUtils
-                .getOutputStream(writableChannel);
+                .getStream(writableChannel);
         write(os);
         os.flush();
     }
