@@ -65,7 +65,7 @@ public abstract class WritableRepresentation extends ChannelRepresentation {
 
     @Override
     public ReadableByteChannel getChannel() throws IOException {
-        return NioUtils.getReadableByteChannel(this);
+        return NioUtils.getChannel(this);
     }
 
     @Override
