@@ -750,14 +750,16 @@ public abstract class ServerResource extends UniformResource {
 
     /**
      * Returns the attribute value by looking up the given name in the response
-     * attributes maps.
+     * attributes maps. The toString() method is then invoked on the attribute
+     * value.
      * 
      * @param name
      *            The attribute name.
      * @return The response attribute value.
      */
     public String getAttribute(String name) {
-        return (String) getResponseAttributes().get(name);
+        Object value = getResponseAttributes().get(name);
+        return (value == null) ? null : value.toString();
     }
 
     /**
@@ -1400,7 +1402,7 @@ public abstract class ServerResource extends UniformResource {
      * @param value
      *            The attribute to set.
      */
-    public void setAttribute(String name, String value) {
+    public void setAttribute(String name, Object value) {
         getResponseAttributes().put(name, value);
     }
 
